// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`isCloudEnabled is false should not render instruction toggle when ON_PREM_ELASTIC_CLOUD instructions are not provided 1`] = `
<EuiPage
  className="homPage"
  restrictWidth={false}
>
  <EuiPageBody
    restrictWidth={false}
  >
    <div>
      <EuiLink
        color="primary"
        href="#/home"
        type="button"
      >
        Home
      </EuiLink>
       /
       
      <EuiLink
        color="primary"
        href="#/home/tutorial_directory"
        type="button"
      >
        Add data
      </EuiLink>
       /
       
      jest test tutorial
    </div>
    <EuiSpacer
      size="s"
    />
    <div>
      <InjectIntl(IntroductionUI)
        description="tutorial used to drive jest tests"
        title="jest test tutorial"
      />
      <EuiSpacer
        size="l"
      />
      <div
        className="eui-textCenter"
      />
      <EuiSpacer
        size="l"
      />
      <EuiPanel
        grow={true}
        hasShadow={false}
        paddingSize="l"
      >
        <InjectIntl(InstructionSetUi)
          instructionVariants={
            Array [
              Object {
                "id": "platform id",
                "instructions": Array [
                  Object {
                    "title": "onPrem instructions",
                  },
                ],
              },
            ]
          }
          key="0"
          offset={1}
          onStatusCheck={[Function]}
          paramValues={Object {}}
          replaceTemplateStrings={[Function]}
          setParameter={[Function]}
          statusCheckState="NOT_CHECKED"
          title="Instruction title"
        />
      </EuiPanel>
    </div>
  </EuiPageBody>
</EuiPage>
`;

exports[`isCloudEnabled is false should render ON_PREM instructions with instruction toggle 1`] = `
<EuiPage
  className="homPage"
  restrictWidth={false}
>
  <EuiPageBody
    restrictWidth={false}
  >
    <div>
      <EuiLink
        color="primary"
        href="#/home"
        type="button"
      >
        Home
      </EuiLink>
       /
       
      <EuiLink
        color="primary"
        href="#/home/tutorial_directory"
        type="button"
      >
        Add data
      </EuiLink>
       /
       
      jest test tutorial
    </div>
    <EuiSpacer
      size="s"
    />
    <div>
      <InjectIntl(IntroductionUI)
        description="tutorial used to drive jest tests"
        iconType="logoApache"
        title="jest test tutorial"
      />
      <EuiSpacer
        size="l"
      />
      <div
        className="eui-textCenter"
      >
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          direction="row"
          gutterSize="l"
          justifyContent="center"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            component="div"
            grow={false}
          >
            <EuiButtonGroup
              buttonSize="s"
              color="primary"
              idSelected="onPrem"
              idToSelectedMap={Object {}}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "id": "onPrem",
                    "label": "Self managed",
                  },
                  Object {
                    "id": "onPremElasticCloud",
                    "label": "Elastic Cloud",
                  },
                ]
              }
              type="single"
            />
          </EuiFlexItem>
        </EuiFlexGroup>
      </div>
      <EuiSpacer
        size="l"
      />
      <EuiPanel
        grow={true}
        hasShadow={false}
        paddingSize="l"
      >
        <InjectIntl(InstructionSetUi)
          instructionVariants={
            Array [
              Object {
                "id": "platform id",
                "instructions": Array [
                  Object {
                    "title": "onPrem instructions",
                  },
                ],
              },
            ]
          }
          key="0"
          offset={1}
          onStatusCheck={[Function]}
          paramValues={Object {}}
          replaceTemplateStrings={[Function]}
          setParameter={[Function]}
          statusCheckState="NOT_CHECKED"
          title="Instruction title"
        />
      </EuiPanel>
    </div>
  </EuiPageBody>
</EuiPage>
`;

exports[`should not render breadcrumbs when K7 1`] = `
<EuiPage
  className="homPage"
  restrictWidth={false}
>
  <EuiPageBody
    restrictWidth={false}
  >
    <div>
      <InjectIntl(IntroductionUI)
        description="tutorial used to drive jest tests"
        iconType="logoApache"
        title="jest test tutorial"
      />
      <EuiSpacer
        size="l"
      />
      <div
        className="eui-textCenter"
      />
      <EuiSpacer
        size="l"
      />
      <EuiPanel
        grow={true}
        hasShadow={false}
        paddingSize="l"
      >
        <InjectIntl(InstructionSetUi)
          instructionVariants={
            Array [
              Object {
                "id": "platform id",
                "instructions": Array [
                  Object {
                    "title": "elasticCloud instructions",
                  },
                ],
              },
            ]
          }
          key="0"
          offset={1}
          onStatusCheck={[Function]}
          paramValues={Object {}}
          replaceTemplateStrings={[Function]}
          setParameter={[Function]}
          statusCheckState="NOT_CHECKED"
          title="Instruction title"
        />
      </EuiPanel>
    </div>
  </EuiPageBody>
</EuiPage>
`;

exports[`should render ELASTIC_CLOUD instructions when isCloudEnabled is true 1`] = `
<EuiPage
  className="homPage"
  restrictWidth={false}
>
  <EuiPageBody
    restrictWidth={false}
  >
    <div>
      <EuiLink
        color="primary"
        href="#/home"
        type="button"
      >
        Home
      </EuiLink>
       /
       
      <EuiLink
        color="primary"
        href="#/home/tutorial_directory"
        type="button"
      >
        Add data
      </EuiLink>
       /
       
      jest test tutorial
    </div>
    <EuiSpacer
      size="s"
    />
    <div>
      <InjectIntl(IntroductionUI)
        description="tutorial used to drive jest tests"
        iconType="logoApache"
        title="jest test tutorial"
      />
      <EuiSpacer
        size="l"
      />
      <div
        className="eui-textCenter"
      />
      <EuiSpacer
        size="l"
      />
      <EuiPanel
        grow={true}
        hasShadow={false}
        paddingSize="l"
      >
        <InjectIntl(InstructionSetUi)
          instructionVariants={
            Array [
              Object {
                "id": "platform id",
                "instructions": Array [
                  Object {
                    "title": "elasticCloud instructions",
                  },
                ],
              },
            ]
          }
          key="0"
          offset={1}
          onStatusCheck={[Function]}
          paramValues={Object {}}
          replaceTemplateStrings={[Function]}
          setParameter={[Function]}
          statusCheckState="NOT_CHECKED"
          title="Instruction title"
        />
      </EuiPanel>
    </div>
  </EuiPageBody>
</EuiPage>
`;
